--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.servlet.context-path=/gameshop4
 spring.datasource.url=jdbc:mysql://localhost:3306/gameshop4?serverTimezone=America/Lima
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
