--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/gameshop4?serverTimezone=Ameri
 spring.datasource.username=root
 spring.datasource.password=root
 spring.session.store-type=jdbc
+server.port=8081
 spring.session.jdbc.initialize-schema=always
